--- a/part3.tex
+++ b/part3.tex
@@ -6,7 +6,7 @@
 
 Like in section \ref{sec:challenges} already mentioned unstable simulation results and non-reproducibility were encountered, which make it hard to interpret the results. Thus, good weights are interpreted mostly as weights with a high potential for a good reward.\\
 The same evolutionary algorithm was tested with slightly different configurations concerning hyper-parameters. 
-The best distances within every generation were plotted with a logarithmic scale and can be seen in figure \ref{fig:results_1}. 
+The best distances within every generation were plotted with a logarithmic scale and can be seen in Fig. \ref{fig:results_1}. 
 
 \begin{figure}[H]
 	\centering
@@ -16,7 +16,8 @@ The best distances within every generation were plotted with a logarithmic scale
 	\label{fig:results_1}
 \end{figure}
 
-The simulations were executed with the following 4 different configurations:\\
+
+The experiments were conducted with the following 4 different configurations:\\
 
 \begin{itemize}
 \item Configuration 1: 
@@ -42,10 +43,9 @@ The simulations were executed with the following 4 different configurations:\\
 \end{itemize}
 \end{itemize}
 
+In general our algorithms was able to quickly find weights with high potential of great distances and even optimizing these weights as it would be desired. But many of those distances were due to instabilities of the distance calculation of the platform or bugs which occured in the physics simulation. Therefore the best distances often were only rarely reproducible. Nevertheless the algorithm still performed well on the given prerequisites.
 
-In general there is to say that our algorithm found weights with high potential for a huge distance in short time and optimized those weights like desired before, but a big part of the distances were instabilities of the calculation in the platform. Furthermore the best distances were only sparsely reproducible due to non instability of the simulation but the algorithm still performed well on the given prerequisites. 
 
 \section{Conclusion}
-
 A brief introduction into genetic algorithms, reinforcement learning and spiking neural networks were given and the reason for the algorithm choice of the given task was elaborated in this paper. The different approaches were described theoretically and problems were discussed. We confirmed that the proposed method learns a set of weights with high potential in acceptable time. Finally the results are given for each of the approaches and its sub-configurations and an interpretation of those was given.
 Future research can be done on other learning strategies or optimizing the hyper-parameters for the evolutionary strategy 2, elaborated in section \ref{sec:strategie_2}.
