--- a/part3.tex
+++ b/part3.tex
@@ -43,9 +43,10 @@ The experiments were conducted with the following 4 different configurations:\\
 \end{itemize}
 \end{itemize}
 
-In general our algorithms was able to quickly find weights with high potential of great distances and even optimizing these weights as it would be desired. But many of those distances were due to instabilities of the distance calculation of the platform or bugs which occured in the physics simulation. Therefore the best distances often were only rarely reproducible. Nevertheless the algorithm still performed well on the given prerequisites.
+In general our algorithm was able to quickly find weights with high potential of great distances and even optimizing these weights as it would be desired. % Der nächste Satz stimmt so nicht mehr, nach were fehlt ein wort, unreproducible? 
+But many of those distances were due to instabilities of the distance calculation of the platform or bugs which occurred in the physics simulation. Therefore the best distances often were only rarely reproducible. Nevertheless the algorithm still performed well on the given prerequisites.
 
 
 \section{Conclusion}
-A brief introduction into genetic algorithms, reinforcement learning and spiking neural networks were given and the reason for the algorithm choice of the given task was elaborated in this paper. The different approaches were described theoretically and problems were discussed. We confirmed that the proposed method learns a set of weights with high potential in acceptable time. Finally the results are given for each of the approaches and its sub-configurations and an interpretation of those was given.
+A brief introduction into genetic algorithms, reinforcement learning and spiking neural networks was given and the reason for the algorithm choice of the given task was elaborated in this paper. The different approaches were described theoretically and problems were discussed. We confirmed that the proposed method learns a set of weights with high potential in acceptable time. Finally the results are given for each of the approaches and its sub-configurations and an interpretation of those was given.
 Future research can be done on other learning strategies or optimizing the hyper-parameters for the evolutionary strategy 2, elaborated in section \ref{sec:strategie_2}.
